crates/cypher-syntax/tests/snapshots/syntax_snapshots__expr_slice_then_index_chain.snap
---
source: crates/cypher-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"RETURN xs[0..3][0]\")"
---
SOURCE_FILE@0..18
  STATEMENT@0..18
    RETURN_CLAUSE@0..18
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..18
        RETURN_ITEMS@6..18
          RETURN_ITEM@6..18
            INDEX_EXPR@6..18
              SLICE_EXPR@6..15
                VAR_EXPR@6..9
                  WHITESPACE@6..7 " "
                  IDENT@7..9 "xs"
                L_BRACK@9..10 "["
                LITERAL_EXPR@10..11
                  INT_LITERAL@10..11 "0"
                DOT_DOT@11..13 ".."
                LITERAL_EXPR@13..14
                  INT_LITERAL@13..14 "3"
                R_BRACK@14..15 "]"
              L_BRACK@15..16 "["
              LITERAL_EXPR@16..17
                INT_LITERAL@16..17 "0"
              R_BRACK@17..18 "]"
