crates/cypher-syntax/tests/snapshots/syntax_snapshots__expr_unary_minus.snap
---
source: crates/cypher-syntax/tests/syntax_snapshots.rs
assertion_line: 334
expression: "format_with_errors(\"RETURN -1\")"
---
SOURCE_FILE@0..9
  STATEMENT@0..9
    RETURN_CLAUSE@0..9
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..9
        RETURN_ITEMS@6..9
          RETURN_ITEM@6..9
            UNARY_EXPR@6..9
              WHITESPACE@6..7 " "
              MINUS@7..8 "-"
              LITERAL_EXPR@8..9
                INT_LITERAL@8..9 "1"
