crates/cypher-syntax/tests/snapshots/syntax_snapshots__multi_stmt_empty_file.snap
---
source: crates/cypher-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"\")"
---
SOURCE_FILE@0..0
