crates/cypher-syntax/tests/snapshots/syntax_snapshots__pattern_all_shortest_paths_named.snap
---
source: crates/cypher-syntax/tests/syntax_snapshots.rs
assertion_line: 351
expression: "format_with_errors(\"MATCH p = allShortestPaths((a)-[:KNOWS*1..5]->(b)) RETURN p\")"
---
SOURCE_FILE@0..59
  STATEMENT@0..59
    MATCH_CLAUSE@0..50
      MATCH_KW@0..5 "MATCH"
      PATTERN@5..50
        NAMED_PATTERN_PART@5..50
          NAME@5..7
            WHITESPACE@5..6 " "
            IDENT@6..7 "p"
          WHITESPACE@7..8 " "
          EQ@8..9 "="
          SHORTEST_PATH_PATTERN@9..50
            WHITESPACE@9..10 " "
            ALLSHORTESTPATHS_KW@10..26 "allShortestPaths"
            L_PAREN@26..27 "("
            PATTERN_PART@27..49
              NODE_PATTERN@27..30
                L_PAREN@27..28 "("
                NAME@28..29
                  IDENT@28..29 "a"
                R_PAREN@29..30 ")"
              REL_PATTERN@30..46
                MINUS@30..31 "-"
                REL_DETAIL@31..44
                  L_BRACK@31..32 "["
                  REL_TYPE_EXPR@32..38
                    COLON@32..33 ":"
                    IDENT@33..38 "KNOWS"
                  REL_LENGTH@38..43
                    STAR@38..39 "*"
                    INT_LITERAL@39..40 "1"
                    DOT_DOT@40..42 ".."
                    INT_LITERAL@42..43 "5"
                  R_BRACK@43..44 "]"
                ARROW_R@44..46 "->"
              NODE_PATTERN@46..49
                L_PAREN@46..47 "("
                NAME@47..48
                  IDENT@47..48 "b"
                R_PAREN@48..49 ")"
            R_PAREN@49..50 ")"
    RETURN_CLAUSE@50..59
      WHITESPACE@50..51 " "
      RETURN_KW@51..57 "RETURN"
      RETURN_BODY@57..59
        RETURN_ITEMS@57..59
          RETURN_ITEM@57..59
            VAR_EXPR@57..59
              WHITESPACE@57..58 " "
              IDENT@58..59 "p"
